// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly 1`] = `
.c0 {
  min-height: 1px;
  border-top: 2px solid #eceff1;
  padding: 16px 8px;
  text-align: center;
}

.c0:first-child {
  border-top: 0;
  border-left: 0;
}

@media (min-width:36em) {
  .c0 {
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 8px;
    border-top: 0;
    border-left: 2px solid #eceff1;
  }
}

<div
  class="c0"
/>
`;

exports[`ProductMultiGrid renders correctly 1`] = `
Array [
  .c0 {
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  border-top: 2px solid #eceff1;
  padding: 16px 8px;
  text-align: center;
}

.c0:first-child {
  border-top: 0;
  border-left: 0;
}

@media (min-width:36em) {
  .c0 {
    -webkit-flex: 0 0 40%;
    -ms-flex: 0 0 40%;
    flex: 0 0 40%;
    max-width: 40%;
  }
}

@media (min-width:36em) {
  .c0 {
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 8px;
    border-top: 0;
    border-left: 2px solid #eceff1;
  }
}

<div
    class="c0"
  >
    <span
      class="MuiTypography-root-1 MuiTypography-subtitle2-20"
    >
      foo
    </span>
    <span
      class="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-colorTextSecondary-34"
    >
      bar
    </span>
  </div>,
  .c0 {
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  border-top: 2px solid #eceff1;
  padding: 16px 8px;
  text-align: center;
}

.c0:first-child {
  border-top: 0;
  border-left: 0;
}

@media (min-width:36em) {
  .c0 {
    -webkit-flex: 0 0 40%;
    -ms-flex: 0 0 40%;
    flex: 0 0 40%;
    max-width: 40%;
  }
}

@media (min-width:36em) {
  .c0 {
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 8px;
    border-top: 0;
    border-left: 2px solid #eceff1;
  }
}

<div
    class="c0"
  >
    <span
      class="MuiTypography-root-1 MuiTypography-subtitle2-20"
    >
      bar
    </span>
    <span
      class="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-colorTextSecondary-34"
    >
      foo
    </span>
  </div>,
]
`;
